@@ -453,3 +453,5 @@ evaluation and ode improvements
 
 * Thomas Weber <thomas.weber.mail@gmail.com> bug and patch for interp
   accelerator
+
+* Lori A. Pritchett-Sheats bug report for vegas chisq.
